# RiftEngine.Core.Runtime

./: CMakeLists.txt  README.md  module.json
private/Engine/Core/Runtime/: App.cpp  AppHost.cpp  App_Internal.hpp  BasicAppHost.cpp  DesktopHost.cpp  StorageSystem.cpp
private/Engine/Core/Runtime/Graphics/: Camera3D.cpp
private/Engine/Core/Runtime/Input/: InputKeys.cpp  InputManager.cpp
private/Engine/Core/Runtime/Memory/: MemArena_Standard.cpp
public/Engine/Core/: Platform.hpp
public/Engine/Core/Hashing/: FNV.hpp
public/Engine/Core/Math/: Vector2.hpp  Vector3.hpp
public/Engine/Core/Runtime/: App.hpp  AppHost.hpp  BasicAppHost.hpp  DesktopHost.hpp  IMutex.hpp  IThread.hpp  IWindow.hpp  Platform.hpp  StorageSystem.hpp
public/Engine/Core/Runtime/Graphics/: Bitmap.hpp  Camera3D.hpp  Color.hpp  ICamera.hpp  IGraphicsBackend.hpp  IGraphicsContext.hpp  IRenderer.hpp  IShader.hpp  IShaderProgram.hpp  ITexture.hpp  IVertexBuffer.hpp  Vertex.hpp
public/Engine/Core/Runtime/Input/: IInputDevice.hpp  InputConsts.hpp  InputEvent.hpp  InputKey.hpp  InputKeys.hpp  InputManager.hpp  InputState.hpp
public/Engine/Core/Runtime/Memory/: MemArena.hpp
